tests/diagnostics/statements/bindings/unused_variable/expect.txt
# exit: 1
lib.coppice:2:5: error: unused variable 'x'
      x := 1
      ^
